--- a/src/style/Contact.css
+++ b/src/style/Contact.css
@@ -7,7 +7,8 @@
   width: 40%; /* Set the width of the background color */
   margin-left: auto; /* Center the element horizontally */
   margin-right: auto; /* Center the element horizontally */
- 
+  border: rgb(255, 0, 0) 3px solid;
+  border-radius: 10px;
 }
 
 .email-direct {
