--- a/src/style/Portfolio.css
+++ b/src/style/Portfolio.css
@@ -9,6 +9,8 @@
   width: 23%; /* Set the width of the background color */
   margin-left: auto; /* Center the element horizontally */
   margin-right: auto; /* Center the element horizontally */
+  border: rgb(255, 0, 0) 3px solid;
+  border-radius: 10px;
 }
 
 /* Set default font and line height for body element */
